Redesign Change Theme page admin panel

--- a/application/themes/default/manifest.json
+++ b/application/themes/default/manifest.json
@@ -1,7 +1,9 @@
 {
 	"name": "Default",
-	"author": "FusionGen",
-	"website": "",
+	"author": "E.Darksider",
+	"website": "skype:darkstriders?chat",
+	"version": "1.0.0",
+	"date": "2023-01-01",
 	
 	"favicon": "../assets/images/favicon.ico",
 
