Add version and date release for modules

--- a/application/modules/changelog/manifest.json
+++ b/application/modules/changelog/manifest.json
@@ -1,5 +1,7 @@
 {
 	"description":"Allows developers to post changelog messages",
+	"version": "2.0.0",
+	"date": "2023-05-30",
 	"author":
 	{
 		"name":"FusionGen",
