--- a/application/modules/admin/manifest.json
+++ b/application/modules/admin/manifest.json
@@ -1,6 +1,8 @@
 {
 	"name": "Admin panel",
 	"description": "Default set of tools and pages for the admin panel",
+	"version": "2.0.0",
+	"date": "2023-05-30",
 	"author": {
 		"name": "FusionGen",
 		"website": "https:\/\/fusiongen.net"
