--- a/application/modules/character/manifest.json
+++ b/application/modules/character/manifest.json
@@ -1,6 +1,8 @@
 {
 	"name": "Character viewer",
 	"description": "Displays the character stats and items",
+	"version": "2.0.0",
+	"date": "2023-05-30",
 	"author": {
 		"name": "FusionGen",
 		"website": "http:\/\/fusiongen.net"
