--- a/application/modules/donate/manifest.json
+++ b/application/modules/donate/manifest.json
@@ -1,6 +1,8 @@
 {
 	"name": "Donate panel",
 	"description": "PayPal and PayGol donation system",
+	"version": "2.0.0",
+	"date": "2023-05-30",
 	"author": {
 		"name": "FusionGen",
 		"website": "http:\/\/fusiongen.net"
