--- a/application/modules/guild/manifest.json
+++ b/application/modules/guild/manifest.json
@@ -1,6 +1,8 @@
 {
 	"name":"Guild viewer",
 	"description":"Displays guild members",
+	"version": "2.0.0",
+	"date": "2023-05-30",
 	"author":
 	{
 		"name":"FusionGen",
