--- a/application/modules/icon/manifest.json
+++ b/application/modules/icon/manifest.json
@@ -1,6 +1,8 @@
 {
 	"name": "Icon provider",
 	"description": "Required by the armory to display icons",
+	"version": "2.0.0",
+	"date": "2023-05-30",
 	"author": {
 		"name": "FusionGen",
 		"website": "http:\/\/fusiongen.net"
