--- a/application/modules/mod/manifest.json
+++ b/application/modules/mod/manifest.json
@@ -1,6 +1,8 @@
 {
 	"name":"Mod panel",
 	"description":"Provides web tools for moderators/GMs",
+	"version": "2.0.0",
+	"date": "2023-05-30",
 	"author":
 	{
 		"name":"Err0r",
