--- a/application/modules/online/manifest.json
+++ b/application/modules/online/manifest.json
@@ -1,7 +1,8 @@
 {
 	"name": "Online players",
 	"description": "Displays all online characters",
-
+	"version": "2.0.0",
+	"date": "2023-05-30",
 	"author": {
 		"name": "FusionGen",
 		"website": "http://fusiongen.net"
