--- a/application/modules/page/manifest.json
+++ b/application/modules/page/manifest.json
@@ -1,7 +1,8 @@
 {
 	"name": "Custom pages",
 	"description": "Allows you to create custom pages",
-
+	"version": "2.0.0",
+	"date": "2023-05-30",
 	"author": {
 		"name": "FusionCMS",
 		"website": "http://fusion-hub.com"
