--- a/application/modules/sidebox_custom/manifest.json
+++ b/application/modules/sidebox_custom/manifest.json
@@ -1,6 +1,8 @@
 {
 	"name":"Sidebox: custom",
 	"description":"Allows you to create sideboxes with custom text",
+	"version": "2.0.0",
+	"date": "2023-05-30",
 	"author":
 	{
 		"name":"FusionCMS",
