--- a/application/modules/sidebox_language_picker/manifest.json
+++ b/application/modules/sidebox_language_picker/manifest.json
@@ -1,6 +1,8 @@
 {
 	"name":"Sidebox: language picker",
 	"description":"Let your users select language",
+	"version": "2.0.0",
+	"date": "2023-05-30",
 	"author":
 	{
 		"name":"FusionCMS",
