--- a/application/modules/sidebox_online_players_extended/manifest.json
+++ b/application/modules/sidebox_online_players_extended/manifest.json
@@ -1,6 +1,8 @@
 {
 	"name":"Sidebox: Extended Server Status",
 	"description":"Automated system",
+	"version": "2.0.0",
+	"date": "2023-05-30",
 	"author":
 	{
 		"name":"Dawnbrightsu",
