--- a/application/modules/sidebox_status/manifest.json
+++ b/application/modules/sidebox_status/manifest.json
@@ -1,7 +1,8 @@
 {
 	"name": "Sidebox: server status",
 	"description": "Displays online players for each realm",
-
+	"version": "2.0.0",
+	"date": "2023-05-30",
 	"author": {
 		"name": "FusionCMS",
 		"website": "http://fusion-hub.com"
