--- a/application/modules/sidebox_toppvp/manifest.json
+++ b/application/modules/sidebox_toppvp/manifest.json
@@ -1,6 +1,8 @@
 {
 	"name":"Sidebox: PvP ladder",
 	"description":"Shows top X PvP players",
+	"version": "2.0.0",
+	"date": "2023-05-30",
 	"author":
 	{
 		"name":"FusionCMS",
