--- a/application/modules/teleport/manifest.json
+++ b/application/modules/teleport/manifest.json
@@ -1,6 +1,8 @@
 {
 	"name": "Teleport hub",
 	"description": "Lets your users teleport - either for free or for the cost of vp\/dp\/gold",
+	"version": "2.0.0",
+	"date": "2023-05-30",
 	"author": {
 		"name": "FusionCMS",
 		"website": "http:\/\/fusion-hub.com"
