rewrite cms name

--- a/application/modules/armory/manifest.json
+++ b/application/modules/armory/manifest.json
@@ -4,8 +4,8 @@
 	"date": "2023-05-30",
 	"author":
 	{
-		"name":"FusionGen",
-		"website":"https:\/\/fusiongen.net"
+		"name":"FusionCMS",
+		"website":"https:\/\/fusion-hub.com"
 	},
 	"permissions":
 	{
