--- a/application/modules/guild/manifest.json
+++ b/application/modules/guild/manifest.json
@@ -5,8 +5,8 @@
 	"date": "2023-05-30",
 	"author":
 	{
-		"name":"FusionGen",
-		"website":"http:\/\/fusiongen.net"
+		"name":"FusionCMS",
+		"website":"https:\/\/fusion-hub.com"
 	},
 	"enabled":true,
 
