--- a/application/modules/admin/manifest.json
+++ b/application/modules/admin/manifest.json
@@ -4,8 +4,8 @@
 	"version": "2.0.0",
 	"date": "2023-05-30",
 	"author": {
-		"name": "FusionGen",
-		"website": "https:\/\/fusiongen.net"
+		"name": "FusionCMS",
+		"website": "https:\/\/fusion-hub.com"
 	},
 
 	"permissions": {
