--- a/application/modules/page/manifest.json
+++ b/application/modules/page/manifest.json
@@ -15,7 +15,7 @@
 			"links": [
 				{
 					"text": "Custom pages",
-					"icon": "windows",
+					"icon": "page",
 					"controller": "admin",
 					"requirePermission": "canViewAdmin"
 				}
