--- a/application/config/fusion.php.dist
+++ b/application/config/fusion.php.dist
@@ -124,9 +124,9 @@ $config['max_expansion'] = "0";
 |
 |--------------------------------------------------------------------------
 */
-$config['slider'] = false;
+$config['slider'] = true;
 $config['slider_home'] = false;
-$config['slider_interval'] = 5000;
+$config['slider_interval'] = 8000;
 $config['slider_style'] = false;
 
 /*
