Rewrite Donate modules
* Fix bug not save month income
* Move codes from model to controller
* clean

--- a/application/modules/donate/manifest.json
+++ b/application/modules/donate/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Donate panel",
-	"description": "PayPal and PayGol donation system",
+	"description": "PayPal donation system",
 	"version": "2.0.0",
 	"date": "2023-05-30",
 	"author": {
