--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "ezyang/htmlpurifier": "^4.16",
         "smarty/smarty": "^4.3",
         "matthiasmullie/minify": "^1.3",
-        "visualappeal/php-auto-update": "^1.0",
+        "fusion-cms/auto-updater": "^1.0",
         "chillerlan/php-qrcode": "^4.3",
         "ext-zip": "*"
     }
