--- a/.htaccess
+++ b/.htaccess
@@ -33,7 +33,8 @@ ServerSignature Off
 
 # Prevent 404 Errors for Non-Existing Redirected Folders
 Options -MultiViews
-ErrorDocument 404 error/index.html
+ErrorDocument 403 /error/403
+ErrorDocument 404 /error/404
 # we also want UTF-8 Encoding
 AddDefaultCharset utf-8
 # Disallow users to view folders with no content
