--- a/.htaccess
+++ b/.htaccess
@@ -85,11 +85,74 @@ ModPagespeedEnableFilters collapse_whitespace,remove_comments
 </IfModule>
 # Keep Alive end
 
-# ETag start
-<IfModule mod_expires.c> 
-  <IfModule mod_headers.c> 
-    Header unset ETag 
-  </IfModule> 
-  FileETag None 
+##### Optimize default expiration time - BEGIN
+<IfModule mod_expires.c>
+    ## Enable expiration control
+    ExpiresActive On
+
+    ## CSS and JS expiration: 1 week after request
+    ExpiresByType text/css "now plus 1 week"
+    ExpiresByType application/javascript "now plus 1 week"
+    ExpiresByType application/x-javascript "now plus 1 week"
+
+    ## Image files expiration: 1 month after request
+    ExpiresByType image/bmp "now plus 1 month"
+    ExpiresByType image/gif "now plus 1 month"
+    ExpiresByType image/jpeg "now plus 1 month"
+    ExpiresByType image/jp2 "now plus 1 month"
+    ExpiresByType image/pipeg "now plus 1 month"
+    ExpiresByType image/png "now plus 1 month"
+    ExpiresByType image/svg+xml "now plus 1 month"
+    ExpiresByType image/tiff "now plus 1 month"
+    ExpiresByType image/x-icon "now plus 1 month"
+    ExpiresByType image/ico "now plus 1 month"
+    ExpiresByType image/icon "now plus 1 month"
+    ExpiresByType text/ico "now plus 1 month"
+    ExpiresByType application/ico "now plus 1 month"
+    ExpiresByType image/vnd.wap.wbmp "now plus 1 month"
+
+    ## Font files expiration: 1 week after request
+    ExpiresByType application/x-font-ttf "now plus 1 week"
+    ExpiresByType application/x-font-opentype "now plus 1 week"
+    ExpiresByType application/x-font-woff "now plus 1 week"
+    ExpiresByType font/woff2 "now plus 1 week"
+    ExpiresByType image/svg+xml "now plus 1 week"
+
+    ## Audio files expiration: 1 month after request
+    ExpiresByType audio/ogg "now plus 1 month"
+    ExpiresByType application/ogg "now plus 1 month"
+    ExpiresByType audio/basic "now plus 1 month"
+    ExpiresByType audio/mid "now plus 1 month"
+    ExpiresByType audio/midi "now plus 1 month"
+    ExpiresByType audio/mpeg "now plus 1 month"
+    ExpiresByType audio/mp3 "now plus 1 month"
+    ExpiresByType audio/x-aiff "now plus 1 month"
+    ExpiresByType audio/x-mpegurl "now plus 1 month"
+    ExpiresByType audio/x-pn-realaudio "now plus 1 month"
+    ExpiresByType audio/x-wav "now plus 1 month"
+
+    ## Movie files expiration: 1 month after request
+    ExpiresByType application/x-shockwave-flash "now plus 1 month"
+    ExpiresByType x-world/x-vrml "now plus 1 month"
+    ExpiresByType video/x-msvideo "now plus 1 month"
+    ExpiresByType video/mpeg "now plus 1 month"
+    ExpiresByType video/mp4 "now plus 1 month"
+    ExpiresByType video/quicktime "now plus 1 month"
+    ExpiresByType video/x-la-asf "now plus 1 month"
+    ExpiresByType video/x-ms-asf "now plus 1 month"
 </IfModule>
-# ETag end
+##### Optimize default expiration time - END
+
+##### Compress resources start
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/plain
+    AddOutputFilterByType DEFLATE text/html
+    AddOutputFilterByType DEFLATE text/xml
+    AddOutputFilterByType DEFLATE text/css
+    AddOutputFilterByType DEFLATE application/xml
+    AddOutputFilterByType DEFLATE application/xhtml+xml
+    AddOutputFilterByType DEFLATE application/rss+xml
+    AddOutputFilterByType DEFLATE application/javascript
+    AddOutputFilterByType DEFLATE application/x-javascript
+</IfModule>
+##### Compress resources end
