--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,14 @@
 {
-    "require": {
+	"description": "Fusion CMS",
+	"name": "fusionwowcms/fusioncms",
+	"type": "project",
+	"homepage": "https://github.com/FusionWowCMS/FusionCMS",
+	"support": {
+		"discord": "https://discord.gg/tnWTkZ7akZ",
+		"source": "https://github.com/FusionWowCMS/FusionCMS"
+	},
+	"require": {
+		"php": ">=8.1",
         "nightprince/php-wowemu-auth": "^1.0",
         "monolog/monolog": "^2.8",
         "psr/log": "^1.1",
@@ -9,7 +18,6 @@
         "matthiasmullie/minify": "^1.3",
         "fusion-cms/auto-updater": "^1.0",
         "fusion-cms/rest-api-sdk-php": "^2.0",
-        "chillerlan/php-qrcode": "^5.0",
-        "ext-zip": "*"
-    }
+        "chillerlan/php-qrcode": "^5.0"
+	}
 }
