--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,11 @@
 		"discord": "https://discord.gg/tnWTkZ7akZ",
 		"source": "https://github.com/FusionWowCMS/FusionCMS"
 	},
+	"autoload": {
+		"psr-4": {
+			"CodeIgniter\\": "system/"
+		}
+	},
 	"require": {
 		"php": ">=8.1",
         "nightprince/php-wowemu-auth": "^1.0",
@@ -18,6 +23,10 @@
         "matthiasmullie/minify": "^1.3",
         "fusion-cms/auto-updater": "^1.0",
         "fusion-cms/rest-api-sdk-php": "^2.0",
-        "chillerlan/php-qrcode": "^5.0"
+        "chillerlan/php-qrcode": "^5.0",
+		"zendframework/zend-escaper": "^2.5"
+	},
+	"scripts": {
+		"post-update-cmd": "CodeIgniter\\ComposerScripts::postUpdate"
 	}
 }
