Update load Error logs admin panel from writable path

--- a/application/modules/admin/manifest.json
+++ b/application/modules/admin/manifest.json
@@ -325,9 +325,9 @@
 			"icon":"list",
 			"links": [
 				{
-					"text": "HP Error Logs",
+					"text": "Error logs",
 					"icon": "list-ul",
-					"controller": "hplogs",
+					"controller": "errorlogs",
 					"requirePermission": "editSystemSettings"
 				},
 				
