--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,20 @@
 	},
 	"require": {
 		"php": ">=8.1",
+
+		"ext-curl": "*",
+		"ext-mysqli": "*",
+		"ext-openssl": "*",
+		"ext-soap": "*",
+		"ext-mbstring": "*",
+		"ext-json": "*",
+		"ext-zip": "*",
+		"ext-zlib": "*",
+		"ext-libxml": "*",
+		"ext-dom": "*",
+		"ext-gmp": "*",
+		"ext-gd": "*",
+
         "nightprince/php-wowemu-auth": "^1.0",
         "monolog/monolog": "^2.8",
         "psr/log": "^1.1",
