System/Language: Implement Replacing Parameters for language system
You can pass an array of values to replace placeholders in the language string as the second parameter to the lang() function. This allows for very simple number translations and formatting.
* The following functions all require the intl extension to be loaded on your system in order to work.

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "ext-dom": "*",
         "ext-gmp": "*",
         "ext-gd": "*",
+        "ext-intl": "*",
 
         "fusion-cms/mx": "^2.0",
         "monolog/monolog": "^2.8",
