--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bootstrap": "^5.3.0",
+    "fontawesome-iconpicker": "github:Nightprince/fontawesome-iconpicker",
     "owl.carousel": "github:OwlCarousel2/OwlCarousel2",
     "sweetalert2": "^11.12.4",
     "vanilla-lazyload": "^19.1.3"
